--- a/client/src/app/privacy/privacy.component.html
+++ b/client/src/app/privacy/privacy.component.html
@@ -5,7 +5,7 @@
 Использование сервисов emo.su означает безоговорочное согласие Пользователя с настоящей Политикой и указанными в ней условиями обработки его персональной информации; в случае несогласия с этими условиями Пользователь должен воздержаться от использования Сервисов.
 <h3>1. Персональная информация Пользователей, которую обрабатывает emo.su</h3>
 В рамках настоящей Политики под «персональной информацией Пользователя» понимаются:<br>
-1.1  Персональная информация, которую Пользователь сообщает о себе представителю emo.su для регистрации (создания учётной записи). Обязательной является: фамилия, имя, пол, учреждение из списка emo.su. Необязательной: дата рождения, фотография.<br>
+1.1  Персональная информация, которую Пользователь сообщает о себе представителю emo.su для регистрации (создания учётной записи). Обязательной является: фамилия, имя, пол, организация из списка emo.su. Необязательной: дата рождения, фотография.<br>
 1.2  Информация, которая автоматически передается emo.su в процессе его эксплуатации с помощью установленной на устройстве Пользователя программы, в том числе IP-адрес, данные файлов cookie, информация о браузере Пользователя (или иной программе, с помощью которой осуществляется доступ к сервисам).<br>
 1.3 Информация, которая создаётся Пользователями во время использования emo.su. В том числе сообщения, мероприятия, голосовые сообщения и файлы, загружаемые в папку «Моя папка».<br>
 Настоящая Политика применима только к информации, обрабатываемой в ходе работы с emo.su.
