--- a/client/src/app/users-page/users-page.component.html
+++ b/client/src/app/users-page/users-page.component.html
@@ -10,7 +10,7 @@
         <input type="text" [(ngModel)]="surname"  name="surname">
 
         <div *ngIf="session.levelStatus == 1">
-            <p class="in_user_filtr dark-{{session.firstColor}}-color">Учреждение:</p>
+            <p class="in_user_filtr dark-{{session.firstColor}}-color">Организания:</p>
             <select *ngIf="institutions$ | async as institutions" [(ngModel)]="institution">
                 <option value="all">Любое</option>
                 <option *ngFor="let institution of institutions" value="{{institution._id}}">{{institution.name}}</option>
@@ -53,7 +53,7 @@
                         <span class="dark-{{session.firstColor}}-color">Пол: </span> <span>{{user.sex === 1 ? 'Мужской' : 'Женский'}}</span>
                     </p><br>
                     <p class="user_info">
-                        <span class="dark-{{session.firstColor}}-color">Учреждение:</span> {{user.institutionName}}
+                        <span class="dark-{{session.firstColor}}-color">Организания:</span> {{user.institutionName}}
                     </p><br>
                     <p class="user_info">
                         <span class="dark-{{session.firstColor}}-color">Роль:</span> {{status[user.levelStatus]}}
