--- a/client/src/app/institutions-page/institutions-delete/institutions-delete.component.html
+++ b/client/src/app/institutions-page/institutions-delete/institutions-delete.component.html
@@ -9,7 +9,7 @@ class="institution dark-{{session.firstColor}}-border"
     <a class="inst-edit inst-right middle-{{session.firstColor}}-bg-hover" routerLink="/manage/institutions">Назад</a>
 
     <span class="inst-span">Вы удаляете {{name}}</span> <br>
-    <br><span class="inst-span dark-{{session.firstColor}}-color">Выберите, куда перевести людей из данного учреждения?</span> <br>
+    <br><span class="inst-span dark-{{session.firstColor}}-color">Выберите, куда перевести людей из данной организации?</span> <br>
     <select *ngIf="institutions$ | async as institutions" formControlName="newID">
         <option 
         *ngFor="let institution of institutions" 
