--- a/client/src/app/public-events-page/public-events-page.component.css
+++ b/client/src/app/public-events-page/public-events-page.component.css
@@ -20,8 +20,8 @@
 
 .like {
     display: inline-block;
-    width: 40px;
-    height: 40px;
+    width: calc(2vw + 10px);
+    height: calc(2vw + 10px);
 }
 
 .countlike {
