--- a/client/src/app/video-rooms-page/video-rooms-bin/video-rooms-bin.component.css
+++ b/client/src/app/video-rooms-page/video-rooms-bin/video-rooms-bin.component.css
@@ -3,3 +3,18 @@
     right: 21vw;
     bottom: 1vw;
   }
+
+
+.room_author {
+  position: relative;
+  float: left;
+  margin-left: 3vw;
+  top: 1vw;
+  margin-top: -4vw;
+  height: calc(4vw - 6px);
+  width: calc(4vw - 6px);
+  z-index: 2;
+  border-radius: 35%;
+  border-style: solid;
+  border-width: 3px;
+}
