--- a/client/src/app/photolikes-page/photolikes-page.component.css
+++ b/client/src/app/photolikes-page/photolikes-page.component.css
@@ -15,13 +15,21 @@
     width: auto;
     height: 15vw;
     display: inline-block;
-    margin: 5px;
+    margin: calc(0.1vw + 2px);
+}
+
+.photos {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 .like {
     display: inline-block;
-    width: 40px;
-    height: 40px;
+    width: calc(2vw + 10px);
+    height: calc(2vw + 10px);
 }
 
 .countlike {
