--- a/client/src/app/video-rooms-page/video-rooms-bin/video-rooms-bin.component.html
+++ b/client/src/app/video-rooms-page/video-rooms-bin/video-rooms-bin.component.html
@@ -3,7 +3,14 @@
     class="friendAvatar dark-{{session.firstColor}}-border green-cursor" 
     [src]="room.image ? room.image : '/images/videorooms.png'"
     (click)="openForm(room)">
-
+    <div class="room_author green-cursor dark-{{session.firstColor}}-border" 
+    *ngIf="room.author_ref"
+    style="background: url({{room.author_ref.photo}}); 
+    background-size: 100% 100%;
+    background-origin: border-box;
+    background-repeat: no-repeat;"
+    (click)="openZoom(room.author_ref.photo, room.title, 'Создатель ' + room.author_ref.name + ' ' + room.author_ref.surname)"> 
+    </div>
     <div class="friendName tc dark-{{session.firstColor}}-border green-cursor" (click)="openForm(room)">
         <span appEasyLang>{{room.title}}</span><br>
     </div>
@@ -12,3 +19,5 @@
 <div class="exit green-cursor" (click)="goToVP()"></div>
 
 <app-video-rooms-bin-form *ngIf="form" [room]="currentRoom" [session]="session" (result)="closeForm($event)"></app-video-rooms-bin-form>
+<app-picture-zoom *ngIf="zoom" [image]="image" [text_top]="text_top" [text_bottom]="text_bottom" (result)="closeZoom($event)"></app-picture-zoom>
+
