--- a/client/src/theme/library.css
+++ b/client/src/theme/library.css
@@ -381,8 +381,8 @@
   .delete, .delete_pict {
     background: url('/images/musorka.png');
     background-size: 100% 100%; 
-    height: 40px;
-    width: 40px;
+    height: calc(2vw + 10px);
+    width: calc(2vw + 10px);
     margin-top: 10px;
     display: block;
     float: right;
