--- a/client/src/app/shared/layouts/login-layout/login-layout.component.html
+++ b/client/src/app/shared/layouts/login-layout/login-layout.component.html
@@ -1,5 +1,7 @@
 <div class="nav light-1-bg">
-    <ul id="nav-mobile" class="">
+    <label for="toggle-1" class="toggle-menu green-cursor"><i class="toggle-icon"></i></label>
+    <input type="checkbox" id="toggle-1">
+    <ul class="light-1-bg nav-mobile">
         <li
         class="nav-admin-li"
         *ngFor="let link of links"
