--- a/client/src/app/shared/layouts/admin-layout/admin-layout.component.html
+++ b/client/src/app/shared/layouts/admin-layout/admin-layout.component.html
@@ -1,16 +1,16 @@
 <div *ngIf="!reloading; else reloader">
     <div class="nav light-{{color}}-bg">
-        <ul id="nav-mobile" class="">
+        <ul class="light-1-bg nav-mobile">
             <li
             class="nav-admin-li"
             *ngFor="let link of links"
             >
-            <a 
-            [routerLink]="[link.url]" 
-            class="nav-admin middle-{{color}}-bg-hover"
-            routerLinkActive="manage-active">
-                {{link.name}}
-            </a>
+                <a 
+                [routerLink]="[link.url]" 
+                class="nav-admin middle-{{color}}-bg-hover"
+                routerLinkActive="manage-active">
+                    {{link.name}}
+                </a>
             </li> 
             <li class="nav-admin-li-right"><a class="nav-admin middle-{{color}}-bg-hover"  href="#" (click)="logout($event)">Выход</a></li>
             <li class="nav-admin-li-right"><a class="nav-admin middle-{{color}}-bg-hover" routerLink="/people/friends">Вернуться</a></li>              
